@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -121,6 +121,8 @@ import java.util.concurrent.ConcurrentMap;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import jdk.internal.util.DecimalDigits;
+
 import sun.text.spi.JavaTimeDateTimePatternProvider;
 import sun.util.locale.provider.CalendarDataUtility;
 import sun.util.locale.provider.LocaleProviderAdapter;
@@ -228,6 +230,42 @@ public final class DateTimeFormatterBuilder {
     }
 
     /**
+     * Returns the formatting pattern for the requested template for a locale and chronology.
+     * The locale and chronology are used to lookup the locale specific format
+     * for the requested template.
+     * <p>
+     * If the locale contains the "rg" (region override)
+     * <a href="../../util/Locale.html#def_locale_extension">Unicode extensions</a>,
+     * the formatting pattern is overridden with the one appropriate for the region.
+     * <p>
+     * Refer to {@link #appendLocalized(String)} for the detail of {@code requestedTemplate}
+     * argument.
+     *
+     * @param requestedTemplate the requested template, not null
+     * @param chrono  the Chronology, non-null
+     * @param locale  the locale, non-null
+     * @return the locale and Chronology specific formatting pattern
+     * @throws IllegalArgumentException if {@code requestedTemplate} does not match
+     *      the regular expression syntax described in {@link #appendLocalized(String)}.
+     * @throws DateTimeException if a match for the localized pattern for
+     *      {@code requestedTemplate} is not available
+     * @see #appendLocalized(String)
+     * @since 19
+     */
+    public static String getLocalizedDateTimePattern(String requestedTemplate,
+                                                     Chronology chrono, Locale locale) {
+        Objects.requireNonNull(requestedTemplate, "requestedTemplate");
+        Objects.requireNonNull(chrono, "chrono");
+        Objects.requireNonNull(locale, "locale");
+        Locale override = CalendarDataUtility.findRegionOverride(locale);
+        LocaleProviderAdapter adapter = LocaleProviderAdapter.getAdapter(JavaTimeDateTimePatternProvider.class, override);
+        JavaTimeDateTimePatternProvider provider = adapter.getJavaTimeDateTimePatternProvider();
+        return provider.getJavaTimeDateTimePattern(requestedTemplate,
+                chrono.getCalendarType(),
+                override);
+    }
+
+    /**
      * Converts the given FormatStyle to the java.text.DateFormat style.
      *
      * @param style  the FormatStyle style
@@ -317,6 +355,10 @@ public final class DateTimeFormatterBuilder {
      * The change will remain in force until the end of the formatter that is eventually
      * constructed or until {@code parseLenient} is called.
      *
+     * @implSpec A {@link Character#SPACE_SEPARATOR SPACE_SEPARATOR} in the input
+     * text will not match any other {@link Character#SPACE_SEPARATOR SPACE_SEPARATOR}s
+     * in the pattern with the strict parse style.
+     *
      * @return this, for chaining, not null
      */
     public DateTimeFormatterBuilder parseStrict() {
@@ -335,6 +377,10 @@ public final class DateTimeFormatterBuilder {
      * When used, this method changes the parsing to be lenient from this point onwards.
      * The change will remain in force until the end of the formatter that is eventually
      * constructed or until {@code parseStrict} is called.
+     *
+     * @implSpec A {@link Character#SPACE_SEPARATOR SPACE_SEPARATOR} in the input
+     * text will match any other {@link Character#SPACE_SEPARATOR SPACE_SEPARATOR}s
+     * in the pattern with the lenient parse style.
      *
      * @return this, for chaining, not null
      */
@@ -1051,14 +1097,14 @@ public final class DateTimeFormatterBuilder {
      * During parsing, the text must match a known zone or offset.
      * There are two types of zone ID, offset-based, such as '+01:30' and
      * region-based, such as 'Europe/London'. These are parsed differently.
-     * If the parse starts with '+', '-', 'UT', 'UTC' or 'GMT', then the parser
-     * expects an offset-based zone and will not match region-based zones.
-     * The offset ID, such as '+02:30', may be at the start of the parse,
-     * or prefixed by  'UT', 'UTC' or 'GMT'. The offset ID parsing is
-     * equivalent to using {@link #appendOffset(String, String)} using the
-     * arguments 'HH:MM:ss' and the no offset string '0'.
-     * If the parse starts with 'UT', 'UTC' or 'GMT', and the parser cannot
-     * match a following offset ID, then {@link ZoneOffset#UTC} is selected.
+     * If the parse starts with '+' or '-', then the parser expects an
+     * offset-based zone and will not match region-based zones. The offset
+     * ID parsing is equivalent to using {@link #appendOffset(String, String)}
+     * using the arguments 'HH:MM:ss' and the no offset string '0'.
+     * If the parse starts with 'UT', 'UTC' or 'GMT', and the parser can
+     * match a following offset, then a region-based zone with the parsed
+     * offset will be returned, or else if the parser cannot match a following
+     * offset, then {@link ZoneOffset#UTC} is selected.
      * In all other cases, the list of known region-based zones is used to
      * find the longest available match. If no match is found, and the parse
      * starts with 'Z', then {@code ZoneOffset.UTC} is selected.
@@ -1072,9 +1118,9 @@ public final class DateTimeFormatterBuilder {
      *   "UTC"                     -- ZoneId.of("UTC")
      *   "GMT"                     -- ZoneId.of("GMT")
      *   "+01:30"                  -- ZoneOffset.of("+01:30")
-     *   "UT+01:30"                -- ZoneOffset.of("+01:30")
-     *   "UTC+01:30"               -- ZoneOffset.of("+01:30")
-     *   "GMT+01:30"               -- ZoneOffset.of("+01:30")
+     *   "UT+01:30"                -- ZoneId.of("UT+01:30")
+     *   "UTC+01:30"               -- ZoneId.of("UTC+01:30")
+     *   "GMT+01:30"               -- ZoneId.of("GMT+01:30")
      * </pre>
      *
      * @return this, for chaining, not null
@@ -1089,8 +1135,7 @@ public final class DateTimeFormatterBuilder {
      * Appends the time-zone region ID, such as 'Europe/Paris', to the formatter,
      * rejecting the zone ID if it is a {@code ZoneOffset}.
      * <p>
-     * This appends an instruction to format/parse the zone ID to the builder
-     * only if it is a region-based ID.
+     * This appends an instruction to format only region-based zone IDs to the builder.
      * <p>
      * During formatting, the zone is obtained using a mechanism equivalent
      * to querying the temporal with {@link TemporalQueries#zoneId()}.
@@ -1102,14 +1147,14 @@ public final class DateTimeFormatterBuilder {
      * During parsing, the text must match a known zone or offset.
      * There are two types of zone ID, offset-based, such as '+01:30' and
      * region-based, such as 'Europe/London'. These are parsed differently.
-     * If the parse starts with '+', '-', 'UT', 'UTC' or 'GMT', then the parser
-     * expects an offset-based zone and will not match region-based zones.
-     * The offset ID, such as '+02:30', may be at the start of the parse,
-     * or prefixed by  'UT', 'UTC' or 'GMT'. The offset ID parsing is
-     * equivalent to using {@link #appendOffset(String, String)} using the
-     * arguments 'HH:MM:ss' and the no offset string '0'.
-     * If the parse starts with 'UT', 'UTC' or 'GMT', and the parser cannot
-     * match a following offset ID, then {@link ZoneOffset#UTC} is selected.
+     * If the parse starts with '+' or '-', then the parser expects an
+     * offset-based zone and will not match region-based zones. The offset
+     * ID parsing is equivalent to using {@link #appendOffset(String, String)}
+     * using the arguments 'HH:MM:ss' and the no offset string '0'.
+     * If the parse starts with 'UT', 'UTC' or 'GMT', and the parser can
+     * match a following offset, then a region-based zone with the parsed
+     * offset will be returned, or else if the parser cannot match a following
+     * offset, then {@link ZoneOffset#UTC} is selected.
      * In all other cases, the list of known region-based zones is used to
      * find the longest available match. If no match is found, and the parse
      * starts with 'Z', then {@code ZoneOffset.UTC} is selected.
@@ -1123,9 +1168,9 @@ public final class DateTimeFormatterBuilder {
      *   "UTC"                     -- ZoneId.of("UTC")
      *   "GMT"                     -- ZoneId.of("GMT")
      *   "+01:30"                  -- ZoneOffset.of("+01:30")
-     *   "UT+01:30"                -- ZoneOffset.of("+01:30")
-     *   "UTC+01:30"               -- ZoneOffset.of("+01:30")
-     *   "GMT+01:30"               -- ZoneOffset.of("+01:30")
+     *   "UT+01:30"                -- ZoneId.of("UT+01:30")
+     *   "UTC+01:30"               -- ZoneId.of("UTC+01:30")
+     *   "GMT+01:30"               -- ZoneId.of("GMT+01:30")
      * </pre>
      * <p>
      * Note that this method is identical to {@code appendZoneId()} except
@@ -1160,14 +1205,14 @@ public final class DateTimeFormatterBuilder {
      * During parsing, the text must match a known zone or offset.
      * There are two types of zone ID, offset-based, such as '+01:30' and
      * region-based, such as 'Europe/London'. These are parsed differently.
-     * If the parse starts with '+', '-', 'UT', 'UTC' or 'GMT', then the parser
-     * expects an offset-based zone and will not match region-based zones.
-     * The offset ID, such as '+02:30', may be at the start of the parse,
-     * or prefixed by  'UT', 'UTC' or 'GMT'. The offset ID parsing is
-     * equivalent to using {@link #appendOffset(String, String)} using the
-     * arguments 'HH:MM:ss' and the no offset string '0'.
-     * If the parse starts with 'UT', 'UTC' or 'GMT', and the parser cannot
-     * match a following offset ID, then {@link ZoneOffset#UTC} is selected.
+     * If the parse starts with '+' or '-', then the parser expects an
+     * offset-based zone and will not match region-based zones. The offset
+     * ID parsing is equivalent to using {@link #appendOffset(String, String)}
+     * using the arguments 'HH:MM:ss' and the no offset string '0'.
+     * If the parse starts with 'UT', 'UTC' or 'GMT', and the parser can
+     * match a following offset, then a region-based zone with the parsed
+     * offset will be returned, or else if the parser cannot match a following
+     * offset, then {@link ZoneOffset#UTC} is selected.
      * In all other cases, the list of known region-based zones is used to
      * find the longest available match. If no match is found, and the parse
      * starts with 'Z', then {@code ZoneOffset.UTC} is selected.
@@ -1181,9 +1226,9 @@ public final class DateTimeFormatterBuilder {
      *   "UTC"                     -- ZoneId.of("UTC")
      *   "GMT"                     -- ZoneId.of("GMT")
      *   "+01:30"                  -- ZoneOffset.of("+01:30")
-     *   "UT+01:30"                -- ZoneOffset.of("UT+01:30")
-     *   "UTC+01:30"               -- ZoneOffset.of("UTC+01:30")
-     *   "GMT+01:30"               -- ZoneOffset.of("GMT+01:30")
+     *   "UT+01:30"                -- ZoneId.of("UT+01:30")
+     *   "UTC+01:30"               -- ZoneId.of("UTC+01:30")
+     *   "GMT+01:30"               -- ZoneId.of("GMT+01:30")
      * </pre>
      * <p>
      * Note that this method is identical to {@code appendZoneId()} except
@@ -1424,6 +1469,86 @@ public final class DateTimeFormatterBuilder {
     }
 
     //-----------------------------------------------------------------------
+    // RegEx pattern for skeleton validity checking
+    private static final Pattern VALID_TEMPLATE_PATTERN = Pattern.compile(
+        "G{0,5}" +        // Era
+        "y*" +            // Year
+        "Q{0,5}" +        // Quarter
+        "M{0,5}" +        // Month
+        "w*" +            // Week of Week Based Year
+        "E{0,5}" +        // Day of Week
+        "d{0,2}" +        // Day of Month
+        "B{0,5}" +        // Period/AmPm of Day
+        "[hHjC]{0,2}" +   // Hour of Day/AmPm
+        "m{0,2}" +        // Minute of Hour
+        "s{0,2}" +        // Second of Minute
+        "[vz]{0,4}");     // Zone
+    /**
+     * Appends a localized pattern to the formatter using the requested template.
+     * <p>
+     * This appends a localized section to the builder, suitable for outputting
+     * a date, time or date-time combination. The format of the localized
+     * section is lazily looked up based on three items:
+     * <ul>
+     * <li>the {@code requestedTemplate} specified to this method
+     * <li>the {@code Locale} of the {@code DateTimeFormatter}
+     * <li>the {@code Chronology} of the {@code DateTimeFormatter} unless overridden
+     * </ul>
+     * During formatting, the chronology is obtained from the temporal object
+     * being formatted, which may have been overridden by
+     * {@link DateTimeFormatter#withChronology(Chronology)}.
+     * <p>
+     * During parsing, if a chronology has already been parsed, then it is used.
+     * Otherwise the default from {@code DateTimeFormatter.withChronology(Chronology)}
+     * is used, with {@code IsoChronology} as the fallback.
+     * <p>
+     * The requested template is a series of typical pattern
+     * symbols in canonical order from the largest date or time unit to the smallest,
+     * which can be expressed with the following regular expression:
+     * {@snippet :
+     *      "G{0,5}" +        // Era
+     *      "y*" +            // Year
+     *      "Q{0,5}" +        // Quarter
+     *      "M{0,5}" +        // Month
+     *      "w*" +            // Week of Week Based Year
+     *      "E{0,5}" +        // Day of Week
+     *      "d{0,2}" +        // Day of Month
+     *      "B{0,5}" +        // Period/AmPm of Day
+     *      "[hHjC]{0,2}" +   // Hour of Day/AmPm (refer to LDML for 'j' and 'C')
+     *      "m{0,2}" +        // Minute of Hour
+     *      "s{0,2}" +        // Second of Minute
+     *      "[vz]{0,4}"       // Zone
+     * }
+     * All pattern symbols are optional, and each pattern symbol represents a field,
+     * for example, 'M' represents the Month field. The number of the pattern symbol letters follows the
+     * same presentation, such as "number" or "text" as in the
+     * <a href="./DateTimeFormatter.html#patterns">Patterns for Formatting and Parsing</a> section.
+     * Other pattern symbols in the requested template are invalid.
+     * <p>
+     * The mapping of the requested template to the closest of the available localized formats
+     * is defined by the
+     * <a href="https://www.unicode.org/reports/tr35/tr35-dates.html#availableFormats_appendItems">
+     * Unicode LDML specification</a>. For example, the formatter created from the requested template
+     * {@code yMMM} will format the date '2020-06-16' to 'Jun 2020' in the {@link Locale#US US locale}.
+     *
+     * @param requestedTemplate the requested template to use, not null
+     * @return this, for chaining, not null
+     * @throws IllegalArgumentException if {@code requestedTemplate} is invalid
+     *
+     * @spec https://www.unicode.org/reports/tr35 Unicode Locale Data Markup Language (LDML)
+     * @see #appendPattern(String)
+     * @since 19
+     */
+    public DateTimeFormatterBuilder appendLocalized(String requestedTemplate) {
+        Objects.requireNonNull(requestedTemplate, "requestedTemplate");
+        if (!VALID_TEMPLATE_PATTERN.matcher(requestedTemplate).matches()) {
+            throw new IllegalArgumentException("Requested template is invalid: " + requestedTemplate);
+        }
+        appendInternal(new LocalizedPrinterParser(requestedTemplate));
+        return this;
+    }
+
+    //-----------------------------------------------------------------------
     /**
      * Appends a character literal to the formatter.
      * <p>
@@ -1494,6 +1619,8 @@ public final class DateTimeFormatterBuilder {
      *
      * @param style the text style to use, not null
      * @return this, for chaining, not null
+     *
+     * @spec https://www.unicode.org/reports/tr35 Unicode Locale Data Markup Language (LDML)
      * @since 16
      */
     public DateTimeFormatterBuilder appendDayPeriodText(TextStyle style) {
@@ -1660,7 +1787,7 @@ public final class DateTimeFormatterBuilder {
      *    D       1      appendValue(ChronoField.DAY_OF_YEAR)
      *    DD      2      appendValue(ChronoField.DAY_OF_YEAR, 2, 3, SignStyle.NOT_NEGATIVE)
      *    DDD     3      appendValue(ChronoField.DAY_OF_YEAR, 3)
-     *    F       1      appendValue(ChronoField.ALIGNED_DAY_OF_WEEK_IN_MONTH)
+     *    F       1      appendValue(ChronoField.ALIGNED_WEEK_OF_MONTH)
      *    g..g    1..n   appendValue(JulianFields.MODIFIED_JULIAN_DAY, n, 19, SignStyle.NORMAL)
      *    E       1      appendText(ChronoField.DAY_OF_WEEK, TextStyle.SHORT)
      *    EE      2      appendText(ChronoField.DAY_OF_WEEK, TextStyle.SHORT)
@@ -2069,7 +2196,7 @@ public final class DateTimeFormatterBuilder {
         FIELD_MAP.put('L', ChronoField.MONTH_OF_YEAR);             // SDF, LDML (stand-alone)
         FIELD_MAP.put('D', ChronoField.DAY_OF_YEAR);               // SDF, LDML
         FIELD_MAP.put('d', ChronoField.DAY_OF_MONTH);              // SDF, LDML
-        FIELD_MAP.put('F', ChronoField.ALIGNED_DAY_OF_WEEK_IN_MONTH);  // SDF, LDML
+        FIELD_MAP.put('F', ChronoField.ALIGNED_WEEK_OF_MONTH);     // SDF, LDML
         FIELD_MAP.put('E', ChronoField.DAY_OF_WEEK);               // SDF, LDML (different to both for 1/2 chars)
         FIELD_MAP.put('c', ChronoField.DAY_OF_WEEK);               // LDML (stand-alone)
         FIELD_MAP.put('e', ChronoField.DAY_OF_WEEK);               // LDML (needs localized week number)
@@ -2378,11 +2505,11 @@ public final class DateTimeFormatterBuilder {
         private final DateTimePrinterParser[] printerParsers;
         private final boolean optional;
 
-        CompositePrinterParser(List<DateTimePrinterParser> printerParsers, boolean optional) {
+        private CompositePrinterParser(List<DateTimePrinterParser> printerParsers, boolean optional) {
             this(printerParsers.toArray(new DateTimePrinterParser[0]), optional);
         }
 
-        CompositePrinterParser(DateTimePrinterParser[] printerParsers, boolean optional) {
+        private CompositePrinterParser(DateTimePrinterParser[] printerParsers, boolean optional) {
             this.printerParsers = printerParsers;
             this.optional = optional;
         }
@@ -2476,7 +2603,7 @@ public final class DateTimeFormatterBuilder {
          * @param padWidth  the width to pad to, 1 or greater
          * @param padChar  the pad character
          */
-        PadPrinterParserDecorator(DateTimePrinterParser printerParser, int padWidth, char padChar) {
+        private PadPrinterParserDecorator(DateTimePrinterParser printerParser, int padWidth, char padChar) {
             // input checked by DateTimeFormatterBuilder
             this.printerParser = printerParser;
             this.padWidth = padWidth;
@@ -2494,9 +2621,15 @@ public final class DateTimeFormatterBuilder {
                 throw new DateTimeException(
                     "Cannot print as output of " + len + " characters exceeds pad width of " + padWidth);
             }
-            for (int i = 0; i < padWidth - len; i++) {
-                buf.insert(preLen, padChar);
+            var count = padWidth - len;
+            if (count == 0) {
+                return true;
             }
+            if (count == 1) {
+                buf.insert(preLen, padChar);
+                return true;
+            }
+            buf.insert(preLen, String.valueOf(padChar).repeat(count));
             return true;
         }
 
@@ -2584,7 +2717,7 @@ public final class DateTimeFormatterBuilder {
         private final TemporalField field;
         private final long value;
 
-        DefaultValueParser(TemporalField field, long value) {
+        private DefaultValueParser(TemporalField field, long value) {
             this.field = field;
             this.value = value;
         }
@@ -2607,9 +2740,11 @@ public final class DateTimeFormatterBuilder {
      */
     static final class CharLiteralPrinterParser implements DateTimePrinterParser {
         private final char literal;
+        private final boolean isSpaceSeparator;
 
-        CharLiteralPrinterParser(char literal) {
+        private CharLiteralPrinterParser(char literal) {
             this.literal = literal;
+            isSpaceSeparator = Character.getType(literal) == Character.SPACE_SEPARATOR;
         }
 
         @Override
@@ -2626,9 +2761,10 @@ public final class DateTimeFormatterBuilder {
             }
             char ch = text.charAt(position);
             if (ch != literal) {
-                if (context.isCaseSensitive() ||
+                if ((context.isCaseSensitive() ||
                         (Character.toUpperCase(ch) != Character.toUpperCase(literal) &&
-                         Character.toLowerCase(ch) != Character.toLowerCase(literal))) {
+                         Character.toLowerCase(ch) != Character.toLowerCase(literal))) &&
+                        !spaceEquals(context, ch)) {
                     return ~position;
                 }
             }
@@ -2642,6 +2778,12 @@ public final class DateTimeFormatterBuilder {
             }
             return "'" + literal + "'";
         }
+
+        private boolean spaceEquals(DateTimeParseContext context, char ch) {
+            return !context.isStrict() && isSpaceSeparator &&
+                    Character.getType(ch) == Character.SPACE_SEPARATOR;
+        }
+
     }
 
     //-----------------------------------------------------------------------
@@ -2651,7 +2793,7 @@ public final class DateTimeFormatterBuilder {
     static final class StringLiteralPrinterParser implements DateTimePrinterParser {
         private final String literal;
 
-        StringLiteralPrinterParser(String literal) {
+        private StringLiteralPrinterParser(String literal) {
             this.literal = literal;  // validated by caller
         }
 
@@ -2717,7 +2859,7 @@ public final class DateTimeFormatterBuilder {
          * @param maxWidth  the maximum field width, from minWidth to 19
          * @param signStyle  the positive/negative sign style, not null
          */
-        NumberPrinterParser(TemporalField field, int minWidth, int maxWidth, SignStyle signStyle) {
+        private NumberPrinterParser(TemporalField field, int minWidth, int maxWidth, SignStyle signStyle) {
             // validated by caller
             this.field = field;
             this.minWidth = minWidth;
@@ -2767,24 +2909,6 @@ public final class DateTimeFormatterBuilder {
             return new NumberPrinterParser(field, minWidth, maxWidth, signStyle, this.subsequentWidth + subsequentWidth);
         }
 
-        /*
-         * Copied from Long.stringSize
-         */
-        private static int stringSize(long x) {
-            int d = 1;
-            if (x >= 0) {
-                d = 0;
-                x = -x;
-            }
-            long p = -10;
-            for (int i = 1; i < 19; i++) {
-                if (x > p)
-                    return i + d;
-                p = 10 * p;
-            }
-            return 19 + d;
-        }
-
         @Override
         public boolean format(DateTimePrintContext context, StringBuilder buf) {
             Long valueLong = context.getValue(field);
@@ -2793,7 +2917,7 @@ public final class DateTimeFormatterBuilder {
             }
             long value = getValue(context, valueLong);
             DecimalStyle decimalStyle = context.getDecimalStyle();
-            int size = stringSize(value);
+            int size = DecimalDigits.stringSize(value);
             if (value < 0) {
                 size--;
             }
@@ -2824,8 +2948,9 @@ public final class DateTimeFormatterBuilder {
                 }
             }
             char zeroDigit = decimalStyle.getZeroDigit();
-            for (int i = 0; i < minWidth - size; i++) {
-                buf.append(zeroDigit);
+            int zeros = minWidth - size;
+            if (zeros > 0) {
+                buf.repeat(zeroDigit, zeros);
             }
             if (zeroDigit == '0' && value != Long.MIN_VALUE) {
                 buf.append(Math.abs(value));
@@ -3008,7 +3133,7 @@ public final class DateTimeFormatterBuilder {
          * @param baseValue  the base value
          * @param baseDate  the base date
          */
-        ReducedPrinterParser(TemporalField field, int minWidth, int maxWidth,
+        private ReducedPrinterParser(TemporalField field, int minWidth, int maxWidth,
                 int baseValue, ChronoLocalDate baseDate) {
             this(field, minWidth, maxWidth, baseValue, baseDate, 0);
             if (minWidth < 1 || minWidth > 10) {
@@ -3161,7 +3286,7 @@ public final class DateTimeFormatterBuilder {
          * @param maxWidth  the maximum width to output, from 0 to 9
          * @param decimalPoint  whether to output the localized decimal point symbol
          */
-        NanosPrinterParser(int minWidth, int maxWidth, boolean decimalPoint) {
+        private NanosPrinterParser(int minWidth, int maxWidth, boolean decimalPoint) {
             this(minWidth, maxWidth, decimalPoint, 0);
             if (minWidth < 0 || minWidth > 9) {
                 throw new IllegalArgumentException("Minimum width must be from 0 to 9 inclusive but was " + minWidth);
@@ -3183,7 +3308,7 @@ public final class DateTimeFormatterBuilder {
          * @param decimalPoint  whether to output the localized decimal point symbol
          * @param subsequentWidth the subsequentWidth for this instance
          */
-        NanosPrinterParser(int minWidth, int maxWidth, boolean decimalPoint, int subsequentWidth) {
+        private NanosPrinterParser(int minWidth, int maxWidth, boolean decimalPoint, int subsequentWidth) {
             super(NANO_OF_SECOND, minWidth, maxWidth, SignStyle.NOT_NEGATIVE, subsequentWidth);
             this.decimalPoint = decimalPoint;
         }
@@ -3227,17 +3352,6 @@ public final class DateTimeFormatterBuilder {
             return false;
         }
 
-        // Simplified variant of Integer.stringSize that assumes positive values
-        private static int stringSize(int x) {
-            int p = 10;
-            for (int i = 1; i < 10; i++) {
-                if (x < p)
-                    return i;
-                p = 10 * p;
-            }
-            return 10;
-        }
-
         private static final int[] TENS = new int[] {
             1,
             10,
@@ -3258,7 +3372,7 @@ public final class DateTimeFormatterBuilder {
             }
             int val = field.range().checkValidIntValue(value, field);
             DecimalStyle decimalStyle = context.getDecimalStyle();
-            int stringSize = stringSize(val);
+            int stringSize = DecimalDigits.stringSize(val);
             char zero = decimalStyle.getZeroDigit();
             if (val == 0 || stringSize < 10 - maxWidth) {
                 // 0 or would round down to 0
@@ -3269,17 +3383,16 @@ public final class DateTimeFormatterBuilder {
                     if (decimalPoint) {
                         buf.append(decimalStyle.getDecimalSeparator());
                     }
-                    for (int i = 0; i < width; i++) {
-                        buf.append(zero);
-                    }
+                    buf.repeat(zero, width);
                 }
             } else {
                 if (decimalPoint) {
                     buf.append(decimalStyle.getDecimalSeparator());
                 }
                 // add leading zeros
-                for (int i = 9 - stringSize; i > 0; i--) {
-                    buf.append(zero);
+                int zeros = 9 - stringSize;
+                if (zeros > 0) {
+                    buf.repeat(zero, zeros);
                 }
                 // truncate unwanted digits
                 if (maxWidth < 9) {
@@ -3366,7 +3479,7 @@ public final class DateTimeFormatterBuilder {
          * @param maxWidth  the maximum width to output, from 0 to 9
          * @param decimalPoint  whether to output the localized decimal point symbol
          */
-        FractionPrinterParser(TemporalField field, int minWidth, int maxWidth, boolean decimalPoint) {
+        private FractionPrinterParser(TemporalField field, int minWidth, int maxWidth, boolean decimalPoint) {
             this(field, minWidth, maxWidth, decimalPoint, 0);
             Objects.requireNonNull(field, "field");
             if (field.range().isFixed() == false) {
@@ -3393,7 +3506,7 @@ public final class DateTimeFormatterBuilder {
          * @param decimalPoint  whether to output the localized decimal point symbol
          * @param subsequentWidth the subsequentWidth for this instance
          */
-        FractionPrinterParser(TemporalField field, int minWidth, int maxWidth, boolean decimalPoint, int subsequentWidth) {
+        private FractionPrinterParser(TemporalField field, int minWidth, int maxWidth, boolean decimalPoint, int subsequentWidth) {
             super(field, minWidth, maxWidth, SignStyle.NOT_NEGATIVE, subsequentWidth);
             this.decimalPoint = decimalPoint;
             ValueRange range = field.range();
@@ -3453,12 +3566,10 @@ public final class DateTimeFormatterBuilder {
                     if (decimalPoint) {
                         buf.append(decimalStyle.getDecimalSeparator());
                     }
-                    for (int i = 0; i < minWidth; i++) {
-                        buf.append(decimalStyle.getZeroDigit());
-                    }
+                    buf.repeat(decimalStyle.getZeroDigit(), minWidth);
                 }
             } else {
-                int outputScale = Math.min(Math.max(fraction.scale(), minWidth), maxWidth);
+                int outputScale = Math.clamp(fraction.scale(), minWidth, maxWidth);
                 fraction = fraction.setScale(outputScale, RoundingMode.FLOOR);
                 if (decimalPoint) {
                     buf.append(decimalStyle.getDecimalSeparator());
@@ -3583,7 +3694,7 @@ public final class DateTimeFormatterBuilder {
          * @param textStyle  the text style, not null
          * @param provider  the text provider, not null
          */
-        TextPrinterParser(TemporalField field, TextStyle textStyle, DateTimeTextProvider provider) {
+        private TextPrinterParser(TemporalField field, TextStyle textStyle, DateTimeTextProvider provider) {
             // validated by caller
             this.field = field;
             this.textStyle = textStyle;
@@ -3681,7 +3792,7 @@ public final class DateTimeFormatterBuilder {
         private static final long SECONDS_0000_TO_1970 = ((146097L * 5L) - (30L * 365L + 7L)) * 86400L;
         private final int fractionalDigits;
 
-        InstantPrinterParser(int fractionalDigits) {
+        private InstantPrinterParser(int fractionalDigits) {
             this.fractionalDigits = fractionalDigits;
         }
 
@@ -3830,7 +3941,7 @@ public final class DateTimeFormatterBuilder {
          * @param pattern  the pattern
          * @param noOffsetText  the text to use for UTC, not null
          */
-        OffsetIdPrinterParser(String pattern, String noOffsetText) {
+        private OffsetIdPrinterParser(String pattern, String noOffsetText) {
             Objects.requireNonNull(pattern, "pattern");
             Objects.requireNonNull(noOffsetText, "noOffsetText");
             this.type = checkPattern(pattern);
@@ -4312,7 +4423,7 @@ public final class DateTimeFormatterBuilder {
 
         /**  Display in generic time-zone format. True in case of pattern letter 'v' */
         private final boolean isGeneric;
-        ZoneTextPrinterParser(TextStyle textStyle, Set<ZoneId> preferredZones, boolean isGeneric) {
+        private ZoneTextPrinterParser(TextStyle textStyle, Set<ZoneId> preferredZones, boolean isGeneric) {
             super(TemporalQueries.zone(), "ZoneText(" + textStyle + ")");
             this.textStyle = Objects.requireNonNull(textStyle, "textStyle");
             this.isGeneric = isGeneric;
@@ -4402,9 +4513,9 @@ public final class DateTimeFormatterBuilder {
 
         // cache per instance for now
         private final Map<Locale, Entry<Integer, SoftReference<PrefixTree>>>
-            cachedTree = new HashMap<>();
+            cachedTree = HashMap.newHashMap(1);
         private final Map<Locale, Entry<Integer, SoftReference<PrefixTree>>>
-            cachedTreeCI = new HashMap<>();
+            cachedTreeCI = HashMap.newHashMap(1);
 
         @Override
         protected PrefixTree getTree(DateTimeParseContext context) {
@@ -4413,9 +4524,8 @@ public final class DateTimeFormatterBuilder {
             }
             Locale locale = context.getLocale();
             boolean isCaseSensitive = context.isCaseSensitive();
-            Set<String> regionIds = new HashSet<>(ZoneRulesProvider.getAvailableZoneIds());
-            Set<String> nonRegionIds = new HashSet<>(64);
-            int regionIdsSize = regionIds.size();
+            Set<String> availableZoneIds = ZoneRulesProvider.getAvailableZoneIds();
+            int regionIdsSize = availableZoneIds.size();
 
             Map<Locale, Entry<Integer, SoftReference<PrefixTree>>> cached =
                 isCaseSensitive ? cachedTree : cachedTreeCI;
@@ -4428,6 +4538,8 @@ public final class DateTimeFormatterBuilder {
                 (tree = entry.getValue().get()) == null)) {
                 tree = PrefixTree.newTree(context);
                 zoneStrings = TimeZoneNameUtility.getZoneStrings(locale);
+                Set<String> nonRegionIds = HashSet.newHashSet(64);
+                Set<String> regionIds = new HashSet<>(availableZoneIds);
                 for (String[] names : zoneStrings) {
                     String zid = names[0];
                     if (!regionIds.remove(zid)) {
@@ -4484,7 +4596,7 @@ public final class DateTimeFormatterBuilder {
         private final TemporalQuery<ZoneId> query;
         private final String description;
 
-        ZoneIdPrinterParser(TemporalQuery<ZoneId> query, String description) {
+        private ZoneIdPrinterParser(TemporalQuery<ZoneId> query, String description) {
             this.query = query;
             this.description = description;
         }
@@ -4552,8 +4664,14 @@ public final class DateTimeFormatterBuilder {
                     if (length >= position + 3 && context.charEquals(text.charAt(position + 2), 'C')) {
                         // There are localized zone texts that start with "UTC", e.g.
                         // "UTC\u221210:00" (MINUS SIGN instead of HYPHEN-MINUS) in French.
-                        // Exclude those ZoneText cases.
-                        if (!(this instanceof ZoneTextPrinterParser)) {
+                        // Treat them as normal '-' with the offset parser (using text parser would
+                        // be problematic due to std/dst distinction)
+                        if (length > position + 3 && context.charEquals(text.charAt(position + 3), '\u2212')) {
+                            var tmpText = "%s-%s".formatted(
+                                    text.subSequence(0, position + 3),
+                                    text.subSequence(position + 4, text.length()));
+                            return parseOffsetBased(context, tmpText, position, position + 3, OffsetIdPrinterParser.INSTANCE_ID_ZERO);
+                        } else {
                             return parseOffsetBased(context, text, position, position + 3, OffsetIdPrinterParser.INSTANCE_ID_ZERO);
                         }
                     } else {
@@ -4598,7 +4716,7 @@ public final class DateTimeFormatterBuilder {
          * @return the position after the parse
          */
         private int parseOffsetBased(DateTimeParseContext context, CharSequence text, int prefixPos, int position, OffsetIdPrinterParser parser) {
-            String prefix = text.subSequence(prefixPos, position).toString().toUpperCase();
+            String prefix = text.subSequence(prefixPos, position).toString().toUpperCase(Locale.ROOT);
             if (position >= text.length()) {
                 context.setParsed(ZoneId.of(prefix));
                 return position;
@@ -4903,7 +5021,7 @@ public final class DateTimeFormatterBuilder {
         /** The text style to output, null means the ID. */
         private final TextStyle textStyle;
 
-        ChronoPrinterParser(TextStyle textStyle) {
+        private ChronoPrinterParser(TextStyle textStyle) {
             // validated by caller
             this.textStyle = textStyle;
         }
@@ -4978,6 +5096,7 @@ public final class DateTimeFormatterBuilder {
 
         private final FormatStyle dateStyle;
         private final FormatStyle timeStyle;
+        private final String requestedTemplate;
 
         /**
          * Constructor.
@@ -4985,10 +5104,23 @@ public final class DateTimeFormatterBuilder {
          * @param dateStyle  the date style to use, may be null
          * @param timeStyle  the time style to use, may be null
          */
-        LocalizedPrinterParser(FormatStyle dateStyle, FormatStyle timeStyle) {
-            // validated by caller
+        private LocalizedPrinterParser(FormatStyle dateStyle, FormatStyle timeStyle) {
+            // params validated by caller
             this.dateStyle = dateStyle;
             this.timeStyle = timeStyle;
+            this.requestedTemplate = null;
+        }
+
+        /**
+         * Constructor.
+         *
+         * @param requestedTemplate the requested template to use, not null
+         */
+        private LocalizedPrinterParser(String requestedTemplate) {
+            // param validated by caller
+            this.dateStyle = null;
+            this.timeStyle = null;
+            this.requestedTemplate = requestedTemplate;
         }
 
         @Override
@@ -5006,7 +5138,8 @@ public final class DateTimeFormatterBuilder {
         /**
          * Gets the formatter to use.
          * <p>
-         * The formatter will be the most appropriate to use for the date and time style in the locale.
+         * The formatter will be the most appropriate to use for the date and time style, or
+         * the requested template for the locale.
          * For example, some locales will use the month name while others will use the number.
          *
          * @param locale  the locale to use, not null
@@ -5015,23 +5148,22 @@ public final class DateTimeFormatterBuilder {
          * @throws IllegalArgumentException if the formatter cannot be found
          */
         private DateTimeFormatter formatter(Locale locale, Chronology chrono) {
-            String key = chrono.getId() + '|' + locale.toString() + '|' + dateStyle + timeStyle;
-            DateTimeFormatter formatter = FORMATTER_CACHE.get(key);
-            if (formatter == null) {
-                String pattern = getLocalizedDateTimePattern(dateStyle, timeStyle, chrono, locale);
-                formatter = new DateTimeFormatterBuilder().appendPattern(pattern).toFormatter(locale);
-                DateTimeFormatter old = FORMATTER_CACHE.putIfAbsent(key, formatter);
-                if (old != null) {
-                    formatter = old;
-                }
-            }
-            return formatter;
+            String key = chrono.getId() + '|' + locale.toString() + '|' +
+                    (requestedTemplate != null ? requestedTemplate : Objects.toString(dateStyle) + timeStyle);
+
+            return FORMATTER_CACHE.computeIfAbsent(key, k ->
+                new DateTimeFormatterBuilder()
+                    .appendPattern(requestedTemplate != null ?
+                        getLocalizedDateTimePattern(requestedTemplate, chrono, locale) :
+                        getLocalizedDateTimePattern(dateStyle, timeStyle, chrono, locale))
+                    .toFormatter(locale));
         }
 
         @Override
         public String toString() {
-            return "Localized(" + (dateStyle != null ? dateStyle : "") + "," +
-                (timeStyle != null ? timeStyle : "") + ")";
+            return "Localized(" + (requestedTemplate != null ? requestedTemplate :
+                (dateStyle != null ? dateStyle : "") + "," +
+                (timeStyle != null ? timeStyle : "")) + ")";
         }
     }
 
@@ -5056,7 +5188,7 @@ public final class DateTimeFormatterBuilder {
          * @param minWidth  the minimum field width, from 1 to 19
          * @param maxWidth  the maximum field width, from minWidth to 19
          */
-        WeekBasedFieldPrinterParser(char chr, int count, int minWidth, int maxWidth) {
+        private WeekBasedFieldPrinterParser(char chr, int count, int minWidth, int maxWidth) {
             this(chr, count, minWidth, maxWidth, 0);
         }
 
@@ -5070,7 +5202,7 @@ public final class DateTimeFormatterBuilder {
          * @param subsequentWidth  the width of subsequent non-negative numbers, 0 or greater,
          * -1 if fixed width due to active adjacent parsing
          */
-        WeekBasedFieldPrinterParser(char chr, int count, int minWidth, int maxWidth,
+        private WeekBasedFieldPrinterParser(char chr, int count, int minWidth, int maxWidth,
                 int subsequentWidth) {
             super(null, minWidth, maxWidth, SignStyle.NOT_NEGATIVE, subsequentWidth);
             this.chr = chr;
@@ -5201,7 +5333,7 @@ public final class DateTimeFormatterBuilder {
          *
          * @param textStyle  the text style, not null
          */
-        DayPeriodPrinterParser(TextStyle textStyle) {
+        private DayPeriodPrinterParser(TextStyle textStyle) {
             // validated by caller
             this.textStyle = textStyle;
         }
