@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -38,7 +38,6 @@ import jdk.test.lib.jfr.RecurseThread;
 
 /**
  * @test
- * @key jfr
  * @requires vm.hasJFR
  * @library /test/lib
  * @run main/othervm jdk.jfr.event.profiling.TestFullStackTrace
@@ -111,7 +110,7 @@ public class TestFullStackTrace {
             if(!isEventFound[i]) {
                // no assertion, let's retry.
                // Could be race condition, i.e safe point during Thread.sleep
-               System.out.println("Falied to validate all threads, will retry.");
+               System.out.println("Failed to validate all threads, will retry.");
                return false;
             }
         }
@@ -121,7 +120,7 @@ public class TestFullStackTrace {
     public static String getTopMethodName(RecordedEvent event) {
         List<RecordedFrame> frames = event.getStackTrace().getFrames();
         Asserts.assertFalse(frames.isEmpty(), "JavaFrames was empty");
-        return frames.get(0).getMethod().getName();
+        return frames.getFirst().getMethod().getName();
     }
 
     private static void checkEvent(RecordedEvent event, int expectedDepth) throws Throwable {
@@ -144,7 +143,7 @@ public class TestFullStackTrace {
             boolean isTruncateExpected = expectedDepth > MAX_DEPTH;
             Asserts.assertEquals(isTruncated, isTruncateExpected, "Wrong value for isTruncated. Expected:" + isTruncateExpected);
 
-            String firstMethod = frames.get(frames.size() - 1).getMethod().getName();
+            String firstMethod = frames.getLast().getMethod().getName();
             boolean isFullTrace = "run".equals(firstMethod);
             String msg = String.format("Wrong values for isTruncated=%b, isFullTrace=%b", isTruncated, isFullTrace);
             Asserts.assertTrue(isTruncated != isFullTrace, msg);
