@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,12 +25,12 @@ package jdk.jfr.jcmd;
 
 import java.io.File;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 
 import jdk.jfr.internal.Repository;
-import jdk.jfr.internal.SecuritySupport.SafePath;
 import jdk.jfr.internal.Options;
 import jdk.test.lib.Asserts;
 import jdk.test.lib.Utils;
@@ -38,7 +38,7 @@ import jdk.test.lib.Utils;
 /**
  * @test
  * @summary The test verifies JFR.configure command
- * @key jfr
+ * @requires vm.flagless
  * @requires vm.hasJFR
  * @library /test/lib /test/jdk
  * @modules jdk.jfr/jdk.jfr.internal
@@ -52,7 +52,6 @@ public class TestJcmdConfigure {
     private static final String GLOBAL_BUFFER_SIZE = "globalbuffersize";
     private static final String THREAD_BUFFER_SIZE = "thread_buffer_size";
     private static final String MAX_CHUNK_SIZE = "maxchunksize";
-    private static final String SAMPLE_THREADS = "samplethreads";
     private static final String UNSUPPORTED_OPTION = "unsupportedoption";
 
     private static final String REPOSITORYPATH_1 = "." + File.pathSeparator + "repo1";
@@ -80,8 +79,6 @@ public class TestJcmdConfigure {
         test(GLOBAL_BUFFER_SIZE, 6);
         test(THREAD_BUFFER_SIZE, 5);
         test(MAX_CHUNK_SIZE, 14 * 1000 * 1000);
-        test(SAMPLE_THREADS, false);
-        test(SAMPLE_THREADS, true);
         testNegative(UNSUPPORTED_OPTION, 100000);
         testNegative(MAX_CHUNK_SIZE, -500);
 
@@ -91,7 +88,7 @@ public class TestJcmdConfigure {
             for (Exception e : testExceptions) {
                 System.out.println("Error: " + e.getMessage());
             }
-            throw testExceptions.get(0);
+            throw testExceptions.getFirst();
         }
     }
 
@@ -125,7 +122,6 @@ public class TestJcmdConfigure {
             case GLOBAL_BUFFER_SIZE: return Options.getGlobalBufferSize();
             case THREAD_BUFFER_SIZE: return Options.getThreadBufferSize();
             case MAX_CHUNK_SIZE: return Options.getMaxChunkSize();
-            case SAMPLE_THREADS: return Options.getSampleThreads();
             default: throw new RuntimeException("Unknown option " + name);
         }
     }
@@ -135,17 +131,17 @@ public class TestJcmdConfigure {
 
         try {
             JcmdHelper.jcmd("JFR.configure", REPOSITORYPATH_SETTING_1);
-            SafePath initialPath = Repository.getRepository().getRepositoryPath();
+            Path initialPath = Repository.getRepository().getRepositoryPath();
 
             JcmdHelper.jcmd("JFR.configure", REPOSITORYPATH_SETTING_1);
-            SafePath samePath = Repository.getRepository().getRepositoryPath();
+            Path samePath = Repository.getRepository().getRepositoryPath();
             Asserts.assertTrue(samePath.equals(initialPath));
 
             List<String> lines = Files.readAllLines(Paths.get(JFR_UNIFIED_LOG_FILE));
             Asserts.assertTrue(lines.stream().anyMatch(l->l.contains(findWhat)));
 
             JcmdHelper.jcmd("JFR.configure", REPOSITORYPATH_SETTING_2);
-            SafePath changedPath = Repository.getRepository().getRepositoryPath();
+            Path changedPath = Repository.getRepository().getRepositoryPath();
 
             Asserts.assertFalse(changedPath.equals(initialPath));
 
